# AtlasLauncher

./: .eslintrc.json  LICENSE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/auth/: mod.rs  msauth.rs
src-tauri/src/common/: mod.rs
src-tauri/src/common/auth/: bearer_token.rs  login.rs  minecraft.rs  mod.rs  server.rs  xbox.rs
src-tauri/src/common/forge/: downloader.rs
src-tauri/src/common/java/: downloader.rs  get_java_path.rs  mod.rs
src-tauri/src/common/minecraft/: downloader.rs  instance.rs  instance_old.rs  mod.rs  versions.rs
src-tauri/src/common/modloader/: fabric.rs  forge.rs  mod.rs  quilt.rs  util.rs
src-tauri/src/common/modpacks/: modrinth.rs
src-tauri/src/common/utils/: check_directory.rs  directory.rs  directory_checker.rs  download_file.rs  file.rs  file_to_json.rs  json_to_file.rs  log.rs  mod.rs
src-tauri/src/data/: constants.rs  enums.rs  mod.rs  models.rs
src-tauri/src/managers/: account.rs  instance.rs  metadata.rs  mod.rs
src-tauri/src/minecraft/: mod.rs  skin.rs  versions.rs
src-tauri/src/models/: auth.rs  events.rs  metadata.rs  mod.rs
src-tauri/src/util/: directory.rs  file.rs
src/assets/icons/: Icons.css  Icons.scss  Icons.tsx
src/data/: constants.tsx  enums.tsx  models.tsx
src/ui/components/: AccountSelector.tsx  BaseDropdown.tsx  BaseModal.tsx  BaseToggle.tsx  ContextMenu.tsx  CreateInstance.tsx  DownloadsBar.tsx  DownloadsMenu.tsx  FabricVersionMenu.tsx  ForgeVersionMenu.tsx  ManageInstance.tsx  SideBar.tsx  TextButton.tsx  TextInput.tsx  VersionMenu.tsx
src/ui/components/AccountsMenu/: AccountsMenu.scss  AccountsMenu.tsx
src/ui/components/BaseButton/: BaseButton.scss  BaseButton.tsx
src/ui/components/BaseMenu/: BaseMenu.scss  BaseMenu.tsx
src/ui/components/SideBar/: SideBar.scss  SideBar.tsx
src/ui/components/TextInput/: TextInput.scss  TextInput.tsx
src/ui/components/TitleBar/: TitleBar.scss  TitleBar.tsx
src/ui/components/version-menus/: VanillaVersionMenu.tsx  styles.scss
src/ui/directives/: click-outside.tsx
src/ui/pages/: Library.tsx  Modpacks.tsx  NewInstance.tsx
src/ui/styles/: AccountSelector.css  App.css  App.scss  BaseDropdown.css  BaseModal.css  BaseToggle.css  ContextMenu.css  CreateInstance.css  DownloadsBar.css  DownloadsMenu.css  FabricVersionMenu.css  ForgeVersionMenu.css  Library.css  ManageInstance.css  Modpacks.css  NewInstance.css  NewInstance.scss  SideBar.css  TextButton.css  TextInput.css  VersionMenu.css  _mixins.scss  _variables.scss  fonts.css  index.scss  main.css
src/ui/styles/themes/: _dark.scss  _default.scss  _light.scss  _og.scss  _pink.scss  _warm.scss  _zebra.scss
src/utils/: mountAnimationHandler.tsx
