[package]
name = "atlaslauncher"
version = "0.0.0"
description = "A Tauri App"
authors = ["Jorge Pardo"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.4", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha.8", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.21.0"
rand = "0.8.5"
async-recursion = "1.0.4"
sha2 = "0.10.6"
zip = "0.6.4"
sha1 = "0.10.5"
chrono = "0.4.24"
rayon = "1.7.0"
futures = "0.3.28"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
