[package]
name = "atlaslauncher"
version = "0.0.0"
description = "A minimalist Minecraft launcher."
authors = ["Jorge Pardo"]
license = "CC BY-NC-SA 4.0"
repository = "https://github.com/J0R6IT0/AtlasLauncher"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.4", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha.8", features = ["dialog-open", "protocol-asset", "shell-open", "window-close", "window-maximize", "window-minimize", "window-start-dragging"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.21.0"
rand = "0.8.5"
sha2 = "0.10.6"
zip = "0.6.4"
sha1 = "0.10.5"
rayon = "1.7.0"
futures = "0.3.28"
regex = "1.7.3"
md5 = "0.7.0"
image = "0.24.6"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
